Image Inpaint시 마스크 영역과 마스크 안된 영역이 반전되는 문제 수정

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -101,10 +101,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "image=cv2.imread('./outputs/ComfyUI_00318_.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1344, 768, 3)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image, ImageOps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(22982) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(22983) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_image=Image.open('ComfyUI_00318_.png').convert('RGBA')\n",
+    "original_image.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(22984) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(22985) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "image=Image.open('layer_0.png').convert('RGBA')\n",
+    "image.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(23021) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(23023) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_alpha=image.getchannel('A')\n",
+    "new_alpha.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(23070) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(23071) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_alpha=ImageOps.invert(new_alpha)\n",
+    "new_alpha.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(23358) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(23359) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_mask=Image.new(\"RGBA\", image.size)\n",
+    "new_mask.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "python(23360) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
+      "python(23361) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_mask.putalpha(new_alpha)\n",
+    "new_mask.show()"
+   ]
   }
  ],
  "metadata": {
