허브 검색 로직 수정

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,27 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1344, 768, 3)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "image.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,18 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "python(22982) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
-      "python(22983) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "original_image=Image.open('ComfyUI_00318_.png').convert('RGBA')\n",
     "original_image.show()"
@@ -158,18 +138,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "python(22984) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
-      "python(22985) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "image=Image.open('layer_0.png').convert('RGBA')\n",
     "image.show()"
@@ -177,18 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "python(23021) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
-      "python(23023) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_alpha=image.getchannel('A')\n",
     "new_alpha.show()"
@@ -196,18 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "python(23070) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
-      "python(23071) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_alpha=ImageOps.invert(new_alpha)\n",
     "new_alpha.show()"
@@ -215,18 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "python(23358) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
-      "python(23359) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_mask=Image.new(\"RGBA\", image.size)\n",
     "new_mask.show()"
@@ -234,21 +178,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "python(23360) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n",
-      "python(23361) MallocStackLogging: can't turn off malloc stack logging because it was not enabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_mask.putalpha(new_alpha)\n",
     "new_mask.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import HfApi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token=os.getenv('HF_TOKEN')\n",
+    "token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api=HfApi(token=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models=api.list_models()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models=api.list_models(task='audio-text-to-text', library=\"transformers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(models)"
    ]
   }
  ],
