mp3파일과 wav파일을 커밋하지 않음

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -267,6 +267,102 @@
    "source": [
     "list(models)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gtts import gTTS\n",
+    "from pydub import AudioSegment\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.fftpack\n",
+    "import scipy.io.wavfile\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text2mp3():\n",
+    "    tts=gTTS('Hello',lang='en')\n",
+    "    tts.save('text1.mp3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text2mp3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text2wav():\n",
+    "    tts=gTTS('Hello', lang=\"en\")\n",
+    "    tts.save('hello.mp3')\n",
+    "    \n",
+    "    w=AudioSegment.from_mp3('hello.mp3')\n",
+    "    w.export('Hello.wav', format='wav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text2wav()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text2wav(text, lang):\n",
+    "    tts=gTTS(text, lang=lang)\n",
+    "    tts.save(f\"{text}.mp3\")\n",
+    "    \n",
+    "    w=AudioSegment.from_mp3(f\"{text}.mp3\")\n",
+    "    w.export(f\"{text}.wav\", format=\"wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text2wav('Hello', lang='en')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text2wav('안녕하세요', lang='ko')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
