RAG를 위한 작업 준비

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -359,10 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_community.document_loaders import DirectoryLoader, TextLoader\n",
+    "\n",
+    "loader = DirectoryLoader(path='characters_info', glob=\"**/*.txt\", loader_cls=TextLoader)\n",
+    "\n",
+    "data=loader.load()\n",
+    "len(data)"
+   ]
   }
  ],
  "metadata": {
