Update for diffusion model fp8 convert

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -746,11 +746,122 @@
     "\n",
     "gr.themes.builder()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "import torch\n",
+    "from safetensors import safe_open\n",
+    "from safetensors.torch import save_file\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "# 変換するディレクトリを指定します\n",
+    "input_dir = \"/tmp/ComfyUI/models/checkpoints/\"\n",
+    "\n",
+    "# 指定したディレクトリ内のすべてのsafetensorsファイルを取得\n",
+    "safetensors_files = list(Path(input_dir).glob(\"*.safetensors\"))\n",
+    "\n",
+    "def convert_model(file_path: str):\n",
+    "    print(f\"変換中: {file_path}\")\n",
+    "    \n",
+    "    # メタデータの読み込み\n",
+    "    try:\n",
+    "        with safe_open(file_path, framework=\"pt\", device=\"cpu\") as f:\n",
+    "            metadata = f.metadata()\n",
+    "            metadata = metadata if metadata is not None else {}\n",
+    "    except Exception as e:\n",
+    "        print(f\"メタデータの読み取り中にエラーが発生しました: {str(e)}\")\n",
+    "        return False\n",
+    "\n",
+    "    # モデルの変換\n",
+    "    try:\n",
+    "        sd_pruned = {}\n",
+    "        with safe_open(file_path, framework=\"pt\", device=\"cpu\") as f:\n",
+    "            for key in tqdm(f.keys(), desc=\"テンソルを変換中\"):\n",
+    "                tensor = f.get_tensor(key)\n",
+    "                sd_pruned[key] = tensor.to(torch.float8_e4m3fn)\n",
+    "\n",
+    "        # 変換したモデルを保存（元のディレクトリに）\n",
+    "        output_dir = os.path.dirname(file_path)\n",
+    "        model_name = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "        output_filename = f\"{model_name}_fp8.safetensors\"\n",
+    "        output_path = os.path.join(output_dir, output_filename)\n",
+    "        save_file(sd_pruned, output_path, metadata={\"format\": \"pt\", **metadata})\n",
+    "        print(f\"ファイルが正常に保存されました: {output_path}\")\n",
+    "\n",
+    "        return True\n",
+    "    except Exception as e:\n",
+    "        print(f\"変換中にエラーが発生しました: {str(e)}\")\n",
+    "        return False\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = \"models/diffusion/checkpoints/sdxl/animagine-xl-4.0-opt.safetensors\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "変換中: models/diffusion/checkpoints/sdxl/animagine-xl-4.0-opt.safetensors\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4da349f93ef64ff0895774ddaa8f31dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "テンソルを変換中:   0%|          | 0/2514 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ファイルが正常に保存されました: models/diffusion/checkpoints/sdxl/animagine-xl-4.0-opt_fp8.safetensors\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_model(file_path)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm",
+   "display_name": "ai",
    "language": "python",
    "name": "python3"
   },
