--- a/model_converter.ipynb
+++ b/model_converter.ipynb
@@ -178,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm",
+   "display_name": "ai",
    "language": "python",
    "name": "python3"
   },
