--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -857,6 +857,47 @@
    "source": [
     "convert_model(file_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_model_to_int8(file_path: str):\n",
+    "    print(f\"Converting: {file_path}\")\n",
+    "    \n",
+    "    # Read metadata\n",
+    "    try:\n",
+    "        with safe_open(file_path, framework=\"pt\", device=\"cpu\") as f:\n",
+    "            metadata = f.metadata()\n",
+    "            metadata = metadata if metadata is not None else {}\n",
+    "    except Exception as e:\n",
+    "        print(f\"ERROR: {str(e)}\")\n",
+    "        return False\n",
+    "\n",
+    "    # Convert the model\n",
+    "    try:\n",
+    "        sd_pruned = {}\n",
+    "        with safe_open(file_path, framework=\"pt\", device=\"cpu\") as f:\n",
+    "            for key in tqdm(f.keys(), desc=\"Converting tensors\"):\n",
+    "                tensor = f.get_tensor(key)\n",
+    "                sd_pruned[key] = tensor.to(torch.float8_e4m3fn)\n",
+    "\n",
+    "        # Save the converted model (in the original directory)\n",
+    "        output_dir = os.path.dirname(file_path)\n",
+    "        model_name = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "        output_filename = f\"{model_name}_fp8.safetensors\"\n",
+    "        output_path = os.path.join(output_dir, output_filename)\n",
+    "        save_file(sd_pruned, output_path, metadata={\"format\": \"pt\", **metadata})\n",
+    "        print(f\"Saved: {output_path}\")\n",
+    "\n",
+    "        return True\n",
+    "    except Exception as e:\n",
+    "        print(f\"ERROR: {str(e)}\")\n",
+    "        return False\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
