Clear outputs notebook.ipynb

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -859,6 +859,50 @@
     "        return False\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import HfApi\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token=os.getenv('HF_TOKEN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api = HfApi(token=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.create_repo(repo_id=\"mlx-community/aya-expanse-8b-8bit\",token=token)\n",
+    "api.upload_folder(\n",
+    "    folder_path=\"models/llm/mlx/CohereForAI__aya-expanse-8b-8bit\",\n",
+    "    repo_id=\"mlx-community/aya-expanse-8b-8bit\",\n",
+    "    token=token,\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
