notebook output clear

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -903,6 +903,20 @@
     "    token=token,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.upload_folder(\n",
+    "    folder_path=\"models/diffusion/loras/sd35_medium/Tomboy_for_SD3.5_Medium_test\",\n",
+    "    repo_id=\"bean980310/Tomboy_for_SD3.5_Medium_test\",\n",
+    "    ignore_patterns=[\"._*\"],\n",
+    "    token=token\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
