--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -917,6 +917,46 @@
     "    token=token\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.messages import AIMessage, BaseMessage, HumanMessage, SystemMessage\n",
+    "\n",
+    "system_message = SystemMessage(content=\"당신은 유용한 AI 비서입니다.\")\n",
+    "user_message = HumanMessage(content=\"안녕?\")\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", system_message.content),\n",
+    "    (\"user\", \"{input}\"),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='당신은 유용한 AI 비서입니다.', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='안녕?', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "messages = prompt.format_messages(input=user_message.content)\n",
+    "messages"
+   ]
   }
  ],
  "metadata": {
@@ -935,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
