--- a/translations/zh_CN.json
+++ b/translations/zh_CN.json
@@ -1,5 +1,11 @@
 {
   "main_title": "面向本地环境的AI伴侣",
+  "image_gen_title": "图像生成",
+  "storyteller_title": "故事讲述者",
+  "tts_title": "文字转语音",
+  "translator_title": "翻译器",
+  "download_title": "模型下载",
+  "settings_title": "设置",
   "select_session_info": "此时将显示选定的会话。",
   "language_select": "选择语言",
   "language_info": "选择界面语言",
